--- a/kicad_pcb_simulation.project
+++ b/kicad_pcb_simulation.project
@@ -50,7 +50,7 @@
         <Library Value="opencv_core"/>
       </Linker>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments="-pcb /home/mx/work/pcba/pcb/testarc/testarc.kicad_pcb -ref &quot;GND&quot; -t -net &quot;/test&quot;  -coupled_max_d 2 -coupled_min_len 0.2 -ltra 0 -anti_pad 0.7 -mmtl 1" UseSeparateDebugArgs="no" DebugArguments="-pcb /home/mx/work/pcba/pcb/testarc/testarc.kicad_pcb -ref &quot;GND&quot; -t -net &quot;/test&quot;  -coupled_max_d 2 -coupled_min_len 0.2 -ltra 0 -anti_pad 0.7 -mmtl 1" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments="-pcb /home/mx/work/pcba/pcb/a33_core/a33_core.kicad_pcb -ref &quot;GND,VCC_DRAM-1V5&quot; -t -coupled &quot;/ddr3/DQS0_N:/ddr3/DQS0_P&quot; -coupled_max_d 2 -coupled_min_len 0.2 -ltra 0 -anti_pad 0.7 -mmtl 1" UseSeparateDebugArgs="no" DebugArguments="-pcb /home/mx/work/pcba/pcb/a33_core/a33_core.kicad_pcb -ref &quot;GND,VCC_DRAM-1V5&quot; -t -coupled &quot;/ddr3/DQS0_N:/ddr3/DQS0_P&quot; -coupled_max_d 2 -coupled_min_len 0.2 -ltra 0 -anti_pad 0.7 -mmtl 1" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <BuildSystem Name="Default"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
