减小图像缩放比率 降低内存使用率

--- a/kicad_pcb_simulation.project
+++ b/kicad_pcb_simulation.project
@@ -2,7 +2,7 @@
 <CodeLite_Project Name="kicad_pcb_simulation" Version="11000" InternalType="Console">
   <Plugins>
     <Plugin Name="qmake">
-      <![CDATA[00020001N0005Debug0000000000000001N0012linux_static000000000000]]>
+      <![CDATA[00030001N0005Debug0000000000000001N0005linux0000000000000001N0012linux_static000000000000]]>
     </Plugin>
   </Plugins>
   <VirtualDirectory Name="plugin">
@@ -43,14 +43,14 @@
         <IncludePath Value="."/>
         <IncludePath Value="/usr/include/opencv4"/>
       </Compiler>
-      <Linker Options="-static;-static-libstdc++;-static-libgcc;-fopenmp" Required="yes">
+      <Linker Options="-fopenmp" Required="yes">
         <Library Value="opencv_highgui"/>
         <Library Value="opencv_imgcodecs"/>
         <Library Value="opencv_imgproc"/>
         <Library Value="opencv_core"/>
       </Linker>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments=" -pcb /home/mx/work/pcba/pcb/testarc/testarc.kicad_pcb -ref &quot;GND&quot; -net &quot;/TN,/TP&quot; -coupled_max_d 2.0 -coupled_min_len 0.5 -ltra 0 -mmtl 1 -o newcfg" UseSeparateDebugArgs="no" DebugArguments=" -pcb /home/mx/work/pcba/pcb/testarc/testarc.kicad_pcb -ref &quot;GND&quot; -net &quot;/TN,/TP&quot; -coupled_max_d 2.0 -coupled_min_len 0.5 -ltra 0 -mmtl 1 -o newcfg" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <BuildSystem Name="Default"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
@@ -61,10 +61,7 @@
         <StartupCommands/>
       </Debugger>
       <PreBuild/>
-      <PostBuild>
-        <Command Enabled="yes">cp -arf plugin/*.py ~/.local/share/kicad/6.0/scripting/plugins/kicad_pcb_simulation/</Command>
-        <Command Enabled="yes">cp $(IntermediateDirectory)/$(ProjectName) ~/.local/share/kicad/6.0/scripting/plugins/kicad_pcb_simulation/</Command>
-      </PostBuild>
+      <PostBuild/>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
         <CleanCommand/>
@@ -105,6 +102,57 @@
       </Debugger>
       <PreBuild/>
       <PostBuild/>
+      <CustomBuild Enabled="no">
+        <RebuildCommand/>
+        <CleanCommand/>
+        <BuildCommand/>
+        <PreprocessFileCommand/>
+        <SingleFileCommand/>
+        <MakefileGenerationCommand/>
+        <ThirdPartyToolName>None</ThirdPartyToolName>
+        <WorkingDirectory/>
+      </CustomBuild>
+      <AdditionalRules>
+        <CustomPostBuild/>
+        <CustomPreBuild/>
+      </AdditionalRules>
+      <Completion EnableCpp11="no" EnableCpp14="no">
+        <ClangCmpFlagsC/>
+        <ClangCmpFlags/>
+        <ClangPP/>
+        <SearchPaths/>
+      </Completion>
+    </Configuration>
+    <Configuration Name="linux" CompilerType="GCC" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
+      <Compiler Options="-g;-O0;-fopenmp;-Wall" C_Options="-g;-O0;-fopenmp;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="1">
+        <IncludePath Value="/usr/include/opencv4/"/>
+      </Compiler>
+      <Linker Options="-fopenmp" Required="yes">
+        <Library Value="opencv_highgui"/>
+        <Library Value="opencv_imgcodecs"/>
+        <Library Value="opencv_imgproc"/>
+        <Library Value="opencv_core"/>
+        <Library Value="z"/>
+      </Linker>
+      <ResourceCompiler Options="" Required="no"/>
+      <General OutputFile="" IntermediateDirectory="" Command="$(WorkspacePath)/cmake-build-$(WorkspaceConfiguration)/output/$(ProjectName)" CommandArguments="-pcb /home/mx/work/pcba/pcb/testarc/testarc.kicad_pcb -ref &quot;GND&quot; -coupled &quot;/TN:/TP&quot; -coupled_max_d 2.0 -coupled_min_len 0.5 -ltra 0 -mmtl 1 -o newcfg" UseSeparateDebugArgs="no" DebugArguments="-pcb /home/mx/work/pcba/pcb/testarc/testarc.kicad_pcb -ref &quot;GND&quot; -coupled &quot;/TN:/TP&quot; -coupled_max_d 2.0 -coupled_min_len 0.5 -ltra 0 -mmtl 1 -o newcfg" WorkingDirectory="$(WorkspacePath)/cmake-build-$(WorkspaceConfiguration)/output" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <BuildSystem Name="CMake"/>
+      <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
+        <![CDATA[]]>
+      </Environment>
+      <Debugger IsRemote="no" RemoteHostName="" RemoteHostPort="" DebuggerPath="" IsExtended="no">
+        <DebuggerSearchPaths/>
+        <PostConnectCommands/>
+        <StartupCommands/>
+      </Debugger>
+      <PreBuild/>
+      <PostBuild>
+        <Command Enabled="yes">mkdir -p ${WORKSPACE_PATH}/z_extractor_plugin/linux</Command>
+        <Command Enabled="yes">cp ${CL_OUTPUT_DIRECTORY}/kicad_pcb_simulation ${WORKSPACE_PATH}/z_extractor_plugin/linux/</Command>
+        <Command Enabled="yes">cp ${CL_OUTPUT_DIRECTORY}/mmtl_bem ${WORKSPACE_PATH}/z_extractor_plugin/linux/</Command>
+        <Command Enabled="yes">cp -rf ${WORKSPACE_PATH}/plugin/*py ${WORKSPACE_PATH}/z_extractor_plugin/</Command>
+        <Command Enabled="yes">cp -rf ${WORKSPACE_PATH}/z_extractor_plugin ~/.local/share/kicad/6.0/scripting/plugins</Command>
+      </PostBuild>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
         <CleanCommand/>
