添加atlc编译命令

--- a/kicad_pcb_simulation.project
+++ b/kicad_pcb_simulation.project
@@ -200,7 +200,9 @@
       </Debugger>
       <PreBuild/>
       <PostBuild>
+        <Command Enabled="yes">cd ${WORKSPACE_PATH}/atlc &amp;&amp; CFLAGS=-static LDFLAGS=-static ./configure &amp;&amp; make -j4</Command>
         <Command Enabled="yes">mkdir -p ${WORKSPACE_PATH}/z_extractor_plugin/linux</Command>
+        <Command Enabled="yes">cp ${WORKSPACE_PATH}/atlc/src/atlc ${WORKSPACE_PATH}/z_extractor_plugin/linux/</Command>
         <Command Enabled="yes">cp ${CL_OUTPUT_DIRECTORY}/kicad_pcb_simulation ${WORKSPACE_PATH}/z_extractor_plugin/linux/</Command>
         <Command Enabled="yes">cp ${CL_OUTPUT_DIRECTORY}/mmtl_bem ${WORKSPACE_PATH}/z_extractor_plugin/linux/</Command>
         <Command Enabled="yes">cp -rf ${WORKSPACE_PATH}/plugin/*py ${WORKSPACE_PATH}/z_extractor_plugin/</Command>
