修复atlc临时文件清理无效的问题

--- a/kicad_pcb_simulation.project
+++ b/kicad_pcb_simulation.project
@@ -175,11 +175,11 @@
       </Completion>
     </Configuration>
     <Configuration Name="linux_static" CompilerType="GCC" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-g;-O0;-fopenmp;-Wall" C_Options="-g;-O0;-fopenmp;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="1">
+      <Compiler Options="-O2;-fopenmp;-Wall" C_Options="-O2;-fopenmp;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="1">
         <IncludePath Value="."/>
         <IncludePath Value="/home/mx/.local_static/include/"/>
       </Compiler>
-      <Linker Options="-static;-fopenmp" Required="yes">
+      <Linker Options="-static;-s;-fopenmp" Required="yes">
         <LibraryPath Value="/home/mx/.local_static/lib"/>
         <Library Value="opencv_highgui"/>
         <Library Value="opencv_imgcodecs"/>
