--- a/kicad_pcb_simulation.project
+++ b/kicad_pcb_simulation.project
@@ -11,6 +11,7 @@
     <File Name="plugin/z_extractor.py"/>
   </VirtualDirectory>
   <VirtualDirectory Name="kicad_pcb_simulation">
+    <File Name="README.md"/>
     <File Name="mmtl.h"/>
     <File Name="mmtl.cpp"/>
     <File Name="Z0_calc.cpp"/>
@@ -147,13 +148,7 @@
         <StartupCommands/>
       </Debugger>
       <PreBuild/>
-      <PostBuild>
-        <Command Enabled="yes">mkdir -p ${WORKSPACE_PATH}/z_extractor_plugin/linux</Command>
-        <Command Enabled="yes">cp ${CL_OUTPUT_DIRECTORY}/kicad_pcb_simulation ${WORKSPACE_PATH}/z_extractor_plugin/linux/</Command>
-        <Command Enabled="yes">cp ${CL_OUTPUT_DIRECTORY}/mmtl_bem ${WORKSPACE_PATH}/z_extractor_plugin/linux/</Command>
-        <Command Enabled="yes">cp -rf ${WORKSPACE_PATH}/plugin/*py ${WORKSPACE_PATH}/z_extractor_plugin/</Command>
-        <Command Enabled="yes">cp -rf ${WORKSPACE_PATH}/z_extractor_plugin ~/.local/share/kicad/6.0/scripting/plugins</Command>
-      </PostBuild>
+      <PostBuild/>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
         <CleanCommand/>
