--- a/kicad_pcb_simulation.project
+++ b/kicad_pcb_simulation.project
@@ -137,7 +137,7 @@
         <Library Value="z"/>
       </Linker>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments=" -pcb /home/mx/桌面/test/test.kicad_pcb -ref &quot;GND&quot; -net &quot;/S1&quot; -coupled &quot;/SN:/SP&quot; -coupled_max_d 1.0 -coupled_min_len 0.5 -ltra 0 -mmtl 1 -lossless_tl 1 -step 0.5 -o newcfg" UseSeparateDebugArgs="no" DebugArguments=" -pcb /home/mx/桌面/test/test.kicad_pcb -ref &quot;GND&quot; -net &quot;/S1&quot; -coupled &quot;/SN:/SP&quot; -coupled_max_d 1.0 -coupled_min_len 0.5 -ltra 0 -mmtl 1 -lossless_tl 1 -step 0.5 -o newcfg" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments="-pcb /home/mx/桌面/test/test.kicad_pcb -ref &quot;GND&quot; -net &quot;/S1&quot; -coupled &quot;/SN:/SP&quot; -coupled_max_d 1.0 -coupled_min_len 0.5 -ltra 0 -mmtl 1 -lossless_tl 1 -step 0.5 -o newcfg&#xA;" UseSeparateDebugArgs="no" DebugArguments="-pcb /home/mx/桌面/test/test.kicad_pcb -ref &quot;GND&quot; -net &quot;/S1&quot; -coupled &quot;/SN:/SP&quot; -coupled_max_d 1.0 -coupled_min_len 0.5 -ltra 0 -mmtl 1 -lossless_tl 1 -step 0.5 -o newcfg&#xA;" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <BuildSystem Name="Default"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
