--- a/z_extractor.project
+++ b/z_extractor.project
@@ -6,6 +6,7 @@
     </Plugin>
   </Plugins>
   <VirtualDirectory Name="plugin">
+    <File Name="plugin/rl_extractor.py"/>
     <File Name="plugin/metadata.json"/>
     <File Name="plugin/__init__.py"/>
     <File Name="plugin/z_extractor.py"/>
@@ -141,7 +142,7 @@
         <Library Value="z"/>
       </Linker>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments=" -pcb /home/mx/桌面/test/test.kicad_pcb -rl -pad &quot;C1.1:C1.2&quot;  -o newcfg" UseSeparateDebugArgs="no" DebugArguments=" -pcb /home/mx/work/pcba/pcb/a33_core/a33_core.kicad_pcb -rl -pad &quot;L5.2:R19.1&quot;  -o newcfg" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="$(ConfigurationName)" Command="$(OutputFile)" CommandArguments=" -pcb /home/mx/桌面/test/test.kicad_pcb -rl -pad &quot;TP1.1:TP2.1&quot;  -o newcfg" UseSeparateDebugArgs="no" DebugArguments=" -pcb /home/mx/work/pcba/pcb/a33_core/a33_core.kicad_pcb -rl -pad &quot;L5.2:R19.1&quot;  -o newcfg" WorkingDirectory="" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <BuildSystem Name="Default"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
@@ -153,8 +154,10 @@
       </Debugger>
       <PreBuild/>
       <PostBuild>
-        <Command Enabled="yes">cp $(IntermediateDirectory)/$(ProjectName) ~/.local/share/kicad/6.0/3rdparty/plugins/com_github_liuanlin-mx_kicad-pcb-simulation/linux</Command>
-        <Command Enabled="yes">cp $(WorkspacePath)/plugin/z_extractor.py ~/.local/share/kicad/6.0/3rdparty/plugins/com_github_liuanlin-mx_kicad-pcb-simulation/</Command>
+        <Command Enabled="yes">cp $(IntermediateDirectory)/$(ProjectName) ~/.local/share/kicad/6.0/3rdparty/plugins/com_github_liuanlin-mx_z-extractor/linux</Command>
+        <Command Enabled="yes">cp $(WorkspacePath)/plugin/z_extractor.py ~/.local/share/kicad/6.0/3rdparty/plugins/com_github_liuanlin-mx_z-extractor/</Command>
+        <Command Enabled="yes">cp $(WorkspacePath)/plugin/rl_extractor.py ~/.local/share/kicad/6.0/3rdparty/plugins/com_github_liuanlin-mx_z-extractor/</Command>
+        <Command Enabled="yes">cp $(WorkspacePath)/plugin/__init__.py ~/.local/share/kicad/6.0/3rdparty/plugins/com_github_liuanlin-mx_z-extractor/</Command>
       </PostBuild>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
