--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "atlc"]
 	path = atlc
 	url = https://github.com/liuanlin-mx/atlc.git
+[submodule "FastHenry2"]
+	path = FastHenry2
+	url = https://github.com/ediloren/FastHenry2.git
